przejrzenie projektu i usuniecie warningow i martwego kodu